--- a/bower.json
+++ b/bower.json
@@ -6,21 +6,27 @@
     "angular-cookies": "~1.3.16",
     "angular-touch": "~1.3.16",
     "angular-sanitize": "~1.3.16",
+    "angular-material": "1.0.1",
     "angular-messages": "~1.3.16",
     "angular-aria": "~1.3.16",
     "jquery": "~2.1.4",
     "angular-resource": "~1.3.16",
     "angular-route": "~1.3.16",
     "bootstrap-sass": "~3.3.5",
+    "bootstrap": "3.3.4",
     "angular-bootstrap": "~0.13.4",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.3.16"
+    "angular": "~1.3.16",
+    "angular-ui-router": "~0.2.15",
+    "lodash": "~4.0.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.16"
+    "angular-mocks": "~1.3.16",
+    "bootstrap-toggle": "~2.2.1",
+    "angular-ui-router": "~0.2.15"
   },
   "overrides": {
     "bootstrap-sass": {
