--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "animate.css": "~3.4.0",
     "angular": "~1.3.16",
     "angular-ui-router": "~0.2.15",
-    "lodash": "~4.0.0"
+    "lodash": "~4.0.0",
+    "ngstorage": "~0.3.10",
+    "angular-jwt": "~0.0.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.16",
